otimizando codigo, management page 80% // fixed analytics component // adjustment scroll feature

--- a/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
+++ b/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
@@ -1,21 +1,33 @@
 <div class="surface-ground px-2">
-  <div class="grid">
-    <div class="col-12 md:col-6 lg:col-3" *ngFor="let card of cards">
+  <div class="grid mt-1">
+    <div class="col-12 sm:col-6 lg:col-3" *ngFor="let card of cards">
       <div class="surface-card shadow-2 p-3 border-round">
         <div class="flex justify-content-between mb-3">
           <div>
-            <span class="block text-500 font-medium mb-3">{{ card.title }}</span>
-            <div class="text-900 font-medium text-xl {{card.textColor}}">{{ card.value }}</div>
+            <span class="block text-500 font-medium mb-3">{{
+              card.title
+            }}</span>
+            <div class="text-900 font-medium text-xl {{ card.textColor }}">
+              {{ card.value }}
+            </div>
           </div>
           <div
-            class="flex align-items-center justify-content-center {{ card.bgColor }} border-round"
+            class="flex align-items-center justify-content-center {{
+              card.bgColor
+            }} border-round"
             style="width: 2.5rem; height: 2.5rem"
           >
             <i [ngClass]="card.icon"></i>
           </div>
         </div>
-        <span class="text-{{card.colorChangeValue}}-500 font-medium w-100">{{ card.changeValue }} </span>
-        <span class="text-500">{{ card.changeText }}</span>
+        <span
+          *ngIf="this.screenWidth > 992"
+          class="text-{{ card.colorChangeValue }}-500 font-medium w-100"
+          >{{ card.changeValue }}
+        </span>
+        <span *ngIf="this.screenWidth > 992" class="text-500">{{
+          card.changeText
+        }}</span>
       </div>
     </div>
   </div>
