--- a/WebApp.Site/src/app/feature-components/table/table.component.html
+++ b/WebApp.Site/src/app/feature-components/table/table.component.html
@@ -5,22 +5,32 @@
   [responsiveLayout]="'stack'"
 >
   <ng-template pTemplate="caption">
-    <div class="flex align-items-center justify-content-end gap-2 p-0">
-      <span>{{ title }}</span>
-      <p-button
-        *ngIf="registryCategory != 2"
-        styleClass=" p-button-rounded p-button-danger"
-        icon="pi pi-plus"
-        [pTooltip]="'Add expense'"
-        (onClick)="addButton(registryCategoryEnum.Expense)"
-      ></p-button>
-      <p-button
-        *ngIf="registryCategory != 1"
-        styleClass=" p-button-rounded p-button-success"
-        icon="pi pi-plus"
-        [pTooltip]="'Add income'"
-        (onClick)="addButton(registryCategoryEnum.Income)"
-      ></p-button>
+    <div class="flex flex-row justify-content-between align-items-center">
+      <form [formGroup]="calendarForm">
+        <p-calendar
+          formControlName="date"
+          view="month"
+          dateFormat="mm/yy"
+          [readonlyInput]="true"
+        ></p-calendar>
+      </form>
+
+      <div class="flex align-items-center justify-content-end gap-2 p-0">
+        <p-button
+          *ngIf="registryCategory != 2"
+          styleClass=" p-button-rounded p-button-danger"
+          icon="pi pi-plus"
+          [pTooltip]="'Add expense'"
+          (onClick)="addButton(registryCategoryEnum.Expense)"
+        ></p-button>
+        <p-button
+          *ngIf="registryCategory != 1"
+          styleClass=" p-button-rounded p-button-success"
+          icon="pi pi-plus"
+          [pTooltip]="'Add income'"
+          (onClick)="addButton(registryCategoryEnum.Income)"
+        ></p-button>
+      </div>
     </div>
   </ng-template>
   <ng-template pTemplate="header">
