--- a/WebApp.Site/src/app/feature-components/menu/menu.component.css
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.css
@@ -6,8 +6,8 @@
   .container {
     width: 100%;
     position: relative;
-    /* background-image: url("https://primefaces.org/cdn/primeng/images/dock/window.jpg"); */
-    background-color: black;
+    background-image: url("https://primefaces.org/cdn/primeng/images/dock/window.jpg");
+    /* background-color: black; */
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -22,7 +22,7 @@
   }
 
   .p-card .p-card-body {
-    padding: 0.5rem;
+    padding: 0.1rem;
   }
 
 }
