--- a/WebApp.Site/src/app/feature-components/menu/menu.component.html
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.html
@@ -1,5 +1,9 @@
 <div class="container flex align-items-center justify-content-center h-screen">
   <p-card id="card-container" class="card-container">
+    <div class="menu-bar flex flex-row bg-gray-300">
+      <p>Nome da pessoa</p>
+      <button>sair</button>
+    </div>
     <router-outlet></router-outlet>
   </p-card>
 </div>
