--- a/WebApp.Site/src/app/feature-components/registry-form/registry-form.component.html
+++ b/WebApp.Site/src/app/feature-components/registry-form/registry-form.component.html
@@ -36,17 +36,19 @@
     placeholder="date"
     dateFormat="dd/mm/yy"
     styleClass="w-full"
+    [showIcon]="true"
+    [appendTo]="'body'"
   ></p-calendar>
 
-  <div class="w-full" *ngIf="typeAction == 'register'">
+  <div class="w-full grid-nogutter formgrid p-fluid" *ngIf="typeAction == 'register'">
     <p-button
       label="register"
-      styleClass="p-button-text p-button-rounded"
+      styleClass="p-button p-button-rounded col-12 mb-2"
       (onClick)="emitRegistry(false)"
     ></p-button>
     <p-button
       label="register and register another"
-      styleClass="p-button-text p-button-rounded"
+      styleClass="p-button-text p-button-secondary p-button-rounded col-12"
       (onClick)="emitRegistry(true)"
     ></p-button>
   </div>
