--- a/WebApp.Site/src/app/feature-components/table/table.component.html
+++ b/WebApp.Site/src/app/feature-components/table/table.component.html
@@ -8,25 +8,26 @@
     <div class="flex flex-row justify-content-between align-items-center">
       <form [formGroup]="calendarForm">
         <p-calendar
-          styleClass="w-8rem"
+          styleClass="w-10rem"
           formControlName="date"
           view="month"
           dateFormat="mm/yy"
           [readonlyInput]="true"
+          [showIcon]="true"
         ></p-calendar>
       </form>
 
       <div class="flex align-items-center justify-content-end gap-2 p-0">
         <p-button
           *ngIf="registryCategory != 2"
-          styleClass="p-button-rounded p-button-danger"
+          styleClass="h-2rem w-2rem md:h-3rem md:w-3rem p-button-rounded p-button-danger"
           icon="pi pi-plus"
           [pTooltip]="'Add expense'"
           (onClick)="addButton(registryCategoryEnum.Expense)"
         ></p-button>
         <p-button
           *ngIf="registryCategory != 1"
-          styleClass="p-button-rounded p-button-success"
+          styleClass="h-2rem w-2rem md:h-3rem md:w-3rem p-button-rounded p-button-success"
           icon="pi pi-plus"
           [pTooltip]="'Add income'"
           (onClick)="addButton(registryCategoryEnum.Income)"
