--- a/WebApp.Site/src/app/feature-components/menu/menu.component.html
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.html
@@ -1,8 +1,14 @@
 <div class="container flex align-items-center justify-content-center h-screen">
   <p-card id="card-container" class="card-container">
-    <div class="menu-bar flex flex-row bg-gray-300">
-      <p>Nome da pessoa</p>
-      <button>sair</button>
+    <div class="menu-bar px-1 flex flex-row justify-content-between align-items-center bg-gray-300">
+      <div class="flex flex-row align-items-center">
+        <i class="pi pi-user " style="font-size: 14px"></i>
+        <p class="ml-1 font-semibold" style="font-size: 14px">Rafael Alves</p>
+      </div>
+
+      <!-- <p>{{user?.name}}</p> -->
+
+      <button class="logout-button"></button>
     </div>
     <router-outlet></router-outlet>
   </p-card>
