add spinner feature / adjustment register form / delete unused applications

--- a/WebApp.Site/src/app/feature-components/menu/menu.component.css
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.css
@@ -30,6 +30,7 @@
 .menu-bar {
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
+  padding: 1px;
 }
 
 /* Reset de estilos para remover margens e paddings padrão */
