--- a/WebApp.Site/src/app/feature-components/menu/menu.component.html
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.html
@@ -3,12 +3,10 @@
     <div class="menu-bar px-1 flex flex-row justify-content-between align-items-center bg-gray-300">
       <div class="flex flex-row align-items-center">
         <i class="pi pi-user " style="font-size: 14px"></i>
-        <p class="ml-1 font-semibold" style="font-size: 14px">Rafael Alves</p>
+        <p class="ml-1 font-semibold" style="font-size: 14px">{{user?.name}}</p>
       </div>
 
-      <!-- <p>{{user?.name}}</p> -->
-
-      <button class="logout-button"></button>
+      <button class="logout-button" (click)="logout()"></button>
     </div>
     <router-outlet></router-outlet>
   </p-card>
