--- a/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
+++ b/WebApp.Site/src/app/feature-components/analytics-values/analytics-values.component.html
@@ -1,7 +1,7 @@
-<div class="surface-ground px-2">
+<div [class]="screenWidth > 576 ? 'px-3': 'px-2'">
   <div class="grid mt-1">
     <div class="col-12 sm:col-4" *ngFor="let card of cards">
-      <div class="surface-card shadow-2 p-3 border-round">
+      <div class="surface-card shadow-2 p-2 border-round">
         <div class="flex justify-content-between mb-3">
           <div>
             <span class="block text-500 font-medium mb-3">{{
