basic code review [frontend]

--- a/WebApp.Site/src/app/feature-components/menu/menu.component.css
+++ b/WebApp.Site/src/app/feature-components/menu/menu.component.css
@@ -33,27 +33,24 @@
   padding: 1px;
 }
 
-/* Reset de estilos para remover margens e paddings padrão */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* Estilos do botão circular */
 .logout-button {
   width: 15px;
   height: 15px;
-  border-radius: 50%; /* Torna o botão um círculo */
-  border: 2px solid #ff5f57; /* Cor vermelha similar ao botão de fechar do MacBook */
-  background-color: #ff5f57; /* Cor vermelha do botão */
+  border-radius: 50%; 
+  border: 2px solid #ff5f57; 
+  background-color: #ff5f57; 
   position: relative;
   cursor: pointer;
-  transition: background-color 0.3s ease; /* Efeito de transição ao passar o mouse */
+  transition: background-color 0.3s ease; 
 }
 
-/* Efeito de hover */
 .logout-button:hover {
-  background-color: #e81123; /* Altera a cor de fundo no hover para um tom mais escuro de vermelho */
+  background-color: #e81123;
 }
 
