--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -1,4 +1,4 @@
-<div class="grid-nogutter w-full" id="full-container">
+<div class="grid-nogutter w-full full-container" id="full-container">
   <app-analytics-values [cards]="cards"></app-analytics-values>
 
   <div class="management-container" id="management-container">
