--- a/WebApp.Site/src/app/pages/login/login.component.html
+++ b/WebApp.Site/src/app/pages/login/login.component.html
@@ -21,7 +21,7 @@
             formControlName="password"
             type="password"
           />
-          <label htmlFor="password">Senha</label>
+          <label htmlFor="password">Password</label>
         </span>
       </div>
 
