--- a/WebApp.Site/src/app/pages/register/register.component.html
+++ b/WebApp.Site/src/app/pages/register/register.component.html
@@ -54,7 +54,7 @@
       </span>
     </div>
     <p-button
-      [pTooltip]="!registerForm.valid ? 'Preencha os campos' : ''"
+      [pTooltip]="!registerForm.valid ? 'Fill in the fields' : ''"
       [disabled]="!registerForm.valid"
       label="Save"
       styleClass="p-button-raised col-12"
