--- a/WebApp.Site/src/app/pages/management/management.component.html
+++ b/WebApp.Site/src/app/pages/management/management.component.html
@@ -67,16 +67,14 @@
   [(visible)]="visible"
   [style]="{ width: widthDialog }"
   [draggable]="false"
-  styleClass="h-30rem"
+  styleClass="h-auto"
   [modal]="true"
 >
   <ng-template pTemplate="header">
-    <span
-      class="text-xl font-bold {{
-        registryCategory == 1 ? 'text-red-400' : 'text-green-400'
-      }}"
-      >{{ registryCategory == 1 ? "Add Expense" : "Add Income" }}</span
-    >
+    <span class="text-xl font-bold {{registryCategory == 1 ? 'text-red-400' : 'text-green-400'}}">
+      {{ typeAction == "edit" ? "Edit" : "Add" }}
+      {{ registryCategory == 1 ? "Expense" : "Income" }}
+    </span>
   </ng-template>
 
   <app-registry-form
@@ -91,3 +89,5 @@
 </p-dialog>
 
 <p-toast></p-toast>
+
+<app-spinner *ngIf="showSpinner"></app-spinner>
