--- a/WebApp.Site/src/app/feature-components/registry-form/registry-form.component.html
+++ b/WebApp.Site/src/app/feature-components/registry-form/registry-form.component.html
@@ -33,7 +33,7 @@
 
   <p-calendar
     formControlName="date"
-    placeholder="date"
+    placeholder="Date"
     dateFormat="dd/mm/yy"
     styleClass="w-full"
     [showIcon]="true"
