--- a/WebApp.Site/src/app/feature-components/table/table.component.html
+++ b/WebApp.Site/src/app/feature-components/table/table.component.html
@@ -64,7 +64,7 @@
           *ngIf="column.useTag"
           class="px-1 p-0"
         >
-          <p-tag [value]="manipulateValue(registry, column)"></p-tag>
+          <p-tag [value]="manipulateValue(registry, column)" styleClass="bg-gray-600"></p-tag>
         </td>
 
         <td *ngIf="last" class="p-0">
